--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,7 +11,7 @@ blocks:
       jobs:
       - name: Codegen test
         commands:
-          - sudo apt-get install flex
+          - sudo apt-get install -f flex 
           - checkout
           - cd code-gen
           - make test 
